--- a/index.html
+++ b/index.html
@@ -4,9 +4,75 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SoilSense</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <link href="dist/styles.css" rel="stylesheet">
 </head>
-<body>
-  <h1 class="text-4xl font-bold text-center text-blue-500">Hello World</h1>
+<body class="bg-[url('/assets/images/background.png')] bg-cover bg-top mx-[135px]"></body>
+  <section id="start" class="relative h-screen">
+    <div class="flex items-center justify-center h-full">
+      <div class="text-center text-white p-8">
+        <h1 class="text-5xl font-extrabold mb-4">Lorem ipsum dolor sit amet,</h1>
+        <h1 class="text-5xl font-extrabold mb-4">consectetur adipiscing elit, sed do eiusmod.</h1>
+        <h1 class="text-5xl font-extrabold mb-4">Lorem ipsum dolor sit amet</h1>
+        <p class="mb-6 text-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <a href="#start" class="bg-green-500 text-white font-semibold py-2 px-6 rounded-full hover:bg-green-600 transition-all">Start</a>
+      </div>
+    </div>
+  </section>
+
+  <section id="intro" class="relative h-screen">
+    <div class="flex justify-between items-center h-full px-8 gap-8">
+      
+      <!-- Left Side -->
+      <div class="w-1/3 flex justify-end items-center">
+        <div class="bg-white/5 backdrop-blur-sm p-8 rounded-[25px] border border-white/50 shadow-lg max-w-md">
+          <h3 class="text-xl text-white font-semibold mb-2">Model’s Accuracy</h3>
+  
+          <!-- Circular Progress Bar (Canvas) -->
+          <div class="relative inline-block mb-4">
+            <canvas id="progressBar" width="200" height="10"></canvas>
+          </div>
+  
+          <div class="text-4xl text-white font-extrabold mb-2">86%</div>
+          <p class="text-lg text-gray-200">Very Good</p>
+        </div>
+      </div>
+  
+      <!-- Right Side -->
+      <div class="w-2/3 flex justify-start items-center">
+        <div class="bg-white/5 backdrop-blur-sm p-8 rounded-[25px] border border-white/50 shadow-lg">
+          <h3 class="text-2xl text-white font-semibold mb-4">Lorem ipsum dolor sit amet, consectetur</h3>
+          <div class="flex justify-center items-center mb-4">
+            <div class="w-1/2 flex items-center">
+              <img src="assets/icons/graph_model.png" alt="Leaf" class="w-16 h-16 mr-4">
+              <div>
+                <p class="text-xl text-white font-semibold">Lorem ipsum dolor sit</p>
+                <p class="text-md text-gray-200">Lorem ipsum dolor sit amet</p>
+              </div>
+            </div>
+            <div class="w-1/2 flex items-center">
+              <img src="assets/icons/pie_data.png" alt="Leaf" class="w-16 h-16 mr-4">
+              <div>
+                <p class="text-xl text-white font-semibold">Lorem ipsum dolor sit</p>
+                <p class="text-md text-gray-200">Lorem ipsum dolor sit amet</p>
+              </div>
+            </div>
+          </div>
+          <p class="text-lg text-gray-200">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+      </div>
+  
+    </div>
+  </section>
+  
+
+  <section id="visualized" class="relative h-screen">
+
+  </section>
+  <section id="data" class="relative h-screen">
+
+  </section>
+  <script src="js/script.js"></script>
 </body>
 </html>
