--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1 class="text-5xl font-extrabold mb-4">consectetur adipiscing elit, sed do eiusmod.</h1>
         <h1 class="text-5xl font-extrabold mb-4">Lorem ipsum dolor sit amet</h1>
         <p class="mb-6 text-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <a href="input_data.html" class="bg-green-500 text-white font-semibold py-2 px-6 rounded-full hover:bg-green-600 transition-all">Start</a>
+        <a href="templates/input_data.html" class="bg-green-500 text-white font-semibold py-2 px-6 rounded-full hover:bg-green-600 transition-all">Start</a>
       </div>
     </div>
   </section>
