--- a/input_data.html
+++ b/input_data.html
@@ -1,112 +1,187 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SoilSense</title>
-  <link rel="icon" href="assets/icons/2719867.png" type="image/x-icon">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet" />
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-cover bg-center" style="background-image: url('/assets/images/background.png')">
-  <section id="input" class="flex items-center justify-center h-screen">
-    <div class="bg-white/5 backdrop-blur-md p-10 rounded-3xl shadow-xl w-full max-w-3xl border-white/50">
-      <h1 class="text-white text-2xl font-semibold text-center mb-8">Input the Samples Data</h1>
-      <form class="grid grid-cols-1 md:grid-cols-2 gap-5 text-white">
-        <div>
-          <label for="temperature" class="block mb-1 font-medium">Temperature</label>
-          <input id="temperature" type="text" class="w-full px-4 py-2 rounded-md bg-white/20 border border-white focus:outline-none" />
-        </div>
-        <div>
-          <label for="humidity" class="block mb-1 font-medium">Humidity</label>
-          <input id="humidity" type="text" class="w-full px-4 py-2 rounded-md bg-white/20 border border-white focus:outline-none" />
-        </div>
-        <div>
-          <label for="moisture" class="block mb-1 font-medium">Moisture</label>
-          <input id="moisture" type="text" class="w-full px-4 py-2 rounded-md bg-white/20 border border-white focus:outline-none" />
-        </div>
-        <div>
-          <label for="nitrogen" class="block mb-1 font-medium">Nitrogen</label>
-          <input id="nitrogen" type="text" class="w-full px-4 py-2 rounded-md bg-white/20 border border-white focus:outline-none" />
-        </div>
-        <div>
-          <label for="potassium" class="block mb-1 font-medium">Pottasium</label>
-          <input id="potassium" type="text" class="w-full px-4 py-2 rounded-md bg-white/20 border border-white focus:outline-none" />
-        </div>
-        <div>
-          <label for="phosphorous" class="block mb-1 font-medium">Phosphorous</label>
-          <input id="phosphorous" type="text" class="w-full px-4 py-2 rounded-md bg-white/20 border border-white focus:outline-none" />
-        </div>
-      </form>
-      <p class="text-white text-sm mt-4 italic">*If your data is decimal use dot (.)</p>
-      <div class="flex justify-center mt-6">
-        <button type="submit" class="bg-lime-300 text-black font-semibold px-8 py-2 rounded-full hover:bg-lime-400 transition">Check</button>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SoilSense</title>
+    <link rel="icon" href="assets/icons/2719867.png" type="image/x-icon" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body class="bg-cover bg-center" style="background-color: black">
+    <section
+      id="input"
+      class="flex items-center justify-center min-h-screen flex-col px-4"
+    >
+      <div
+        class="bg-white/5 backdrop-blur-md p-10 rounded-3xl shadow-xl w-full max-w-3xl border-white/50"
+      >
+        <h1 class="text-white text-2xl font-semibold text-center mb-8">
+          Input the Samples Data
+        </h1>
+        <form
+          id="cropForm"
+          class="grid grid-cols-1 md:grid-cols-2 gap-5 text-white"
+        >
+          <div>
+            <label for="temperature" class="block mb-1 font-medium">N</label>
+            <input
+              name="temperature"
+              id="temperature"
+              type="text"
+              class="w-full px-4 py-2 rounded-md bg-white/20 border border-white focus:outline-none"
+              required
+            />
+          </div>
+          <div>
+            <label for="humidity" class="block mb-1 font-medium">P</label>
+            <input
+              name="humidity"
+              id="humidity"
+              type="text"
+              class="w-full px-4 py-2 rounded-md bg-white/20 border border-white focus:outline-none"
+              required
+            />
+          </div>
+          <div>
+            <label for="rainfall" class="block mb-1 font-medium"
+              >Rainfall</label
+            >
+            <input
+              name="rainfall"
+              id="rainfall"
+              type="text"
+              class="w-full px-4 py-2 rounded-md bg-white/20 border border-white focus:outline-none"
+              required
+            />
+          </div>
+          <div>
+            <label for="N" class="block mb-1 font-medium">Nitrogen</label>
+            <input
+              name="N"
+              id="N"
+              type="text"
+              class="w-full px-4 py-2 rounded-md bg-white/20 border border-white focus:outline-none"
+              required
+            />
+          </div>
+          <div>
+            <label for="K" class="block mb-1 font-medium">Pottasium</label>
+            <input
+              name="K"
+              id="K"
+              type="text"
+              class="w-full px-4 py-2 rounded-md bg-white/20 border border-white focus:outline-none"
+              required
+            />
+          </div>
+          <div>
+            <label for="P" class="block mb-1 font-medium">Phosphorous</label>
+            <input
+              name="P"
+              id="P"
+              type="text"
+              class="w-full px-4 py-2 rounded-md bg-white/20 border border-white focus:outline-none"
+              required
+            />
+          </div>
+          <div>
+            <label for="ph" class="block mb-1 font-medium">pH</label>
+            <input
+              name="ph"
+              id="ph"
+              type="text"
+              class="w-full px-4 py-2 rounded-md bg-white/20 border border-white focus:outline-none"
+              required
+            />
+          </div>
+          <div class="md:col-span-2 flex justify-center mt-4">
+            <button
+              type="submit"
+              class="bg-lime-300 text-black font-semibold px-8 py-2 rounded-full hover:bg-lime-400 transition"
+            >
+              Check
+            </button>
+          </div>
+        </form>
+        <p class="text-white text-sm mt-4 italic text-center">
+          *If your data is decimal use dot (.)
+        </p>
       </div>
-    </div>
-  </section>
 
-  <section id="result" class="relative h-screen bg-cover bg-center">
-   
-    <div class="relative z-10 flex flex-col items-center justify-center h-full px-4">
-      <h2 class="text-white text-3xl font-bold mb-10">Prediction Result</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-6xl w-full">
-        
-        <!-- Card 1 -->
-        <div class="flex items-center bg-white/10 backdrop-blur-md border border-white/20 p-6 rounded-xl text-white">
-          <div class="w-20 h-20 bg-white rounded-full mr-6"></div>
-          <div>
-            <h3 class="text-lg font-bold mb-1">Soil Type : Sandy</h3>
-            <p class="text-sm leading-relaxed">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </p>
+      <hr class="my-10 border-white/20 w-full max-w-3xl" />
+
+      <section id="result" class="w-full max-w-4xl hidden">
+        <h2 class="text-white text-3xl font-bold mb-10 text-center">
+          Prediction Result
+        </h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+          <div
+            class="flex items-center bg-white/10 backdrop-blur-md border border-white/20 p-6 rounded-xl text-white"
+          >
+            <div class="w-20 h-20 bg-white rounded-full mr-6"></div>
+            <div>
+              <h3 class="text-lg font-bold mb-1">Predicted Crop</h3>
+              <p class="text-sm leading-relaxed" id="predictedLabel">-</p>
+            </div>
+          </div>
+          <div
+            class="flex items-center bg-white/10 backdrop-blur-md border border-white/20 p-6 rounded-xl text-white"
+          >
+            <div class="w-20 h-20 bg-white rounded-full mr-6"></div>
+            <div>
+              <h3 class="text-lg font-bold mb-1">Fertility Score</h3>
+              <p class="text-sm leading-relaxed" id="fertilityScore">-</p>
+            </div>
           </div>
         </div>
-  
-        <!-- Card 2 -->
-        <div class="flex items-center bg-white/10 backdrop-blur-md border border-white/20 p-6 rounded-xl text-white">
-          <div class="w-20 h-20 bg-white rounded-full mr-6"></div>
-          <div>
-            <h3 class="text-lg font-bold mb-1">Soil Type : Sandy</h3>
-            <p class="text-sm leading-relaxed">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </p>
-          </div>
-        </div>
-  
-        <!-- Card 3 -->
-        <div class="flex items-center bg-white/10 backdrop-blur-md border border-white/20 p-6 rounded-xl text-white">
-          <div class="w-20 h-20 bg-white rounded-full mr-6"></div>
-          <div>
-            <h3 class="text-lg font-bold mb-1">Soil Type : Sandy</h3>
-            <p class="text-sm leading-relaxed">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </p>
-          </div>
-        </div>
-  
-        <!-- Card 4 -->
-        <div class="flex items-center bg-white/10 backdrop-blur-md border border-white/20 p-6 rounded-xl text-white">
-          <div class="w-20 h-20 bg-white rounded-full mr-6"></div>
-          <div>
-            <h3 class="text-lg font-bold mb-1">Soil Type : Sandy</h3>
-            <p class="text-sm leading-relaxed">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </p>
-          </div>
-        </div>
-  
-      </div>
-    </div>
-  </section>
-  
-  <footer class="text-center text-white py-6">
-    <p>&copy; Kelompok 8 PM  IF 2022
-      <br/>2025 SoilSense. All rights reserved.</p>
-  </footer>  
-  
-</body>
+      </section>
+    </section>
+
+    <footer class="text-center text-white py-6">
+      <p>
+        &copy; Kelompok 8 PM IF 2022<br />2025 SoilSense. All rights reserved.
+      </p>
+    </footer>
+
+    <script>
+      const form = document.getElementById("cropForm");
+      const predictedLabelElement = document.getElementById("predictedLabel");
+      const fertilityScoreElement = document.getElementById("fertilityScore");
+      const resultSection = document.getElementById("result");
+
+      form.addEventListener("submit", async (e) => {
+        e.preventDefault();
+        const formData = new FormData(form);
+        const data = Object.fromEntries(formData.entries());
+
+        for (let key in data) {
+          data[key] = parseFloat(data[key]);
+        }
+
+        try {
+          const response = await fetch("/predict", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify(data),
+          });
+
+          const result = await response.json();
+
+          if (result.error) {
+            alert("Error: " + result.error);
+          } else {
+            predictedLabelElement.textContent = result.predicted_crop;
+            fertilityScoreElement.textContent = result.fertility_score;
+            resultSection.classList.remove("hidden");
+          }
+        } catch (error) {
+          alert("Gagal mengirim data ke server.");
+        }
+      });
+    </script>
+  </body>
 </html>
